--- a/DirUI react/dir-ui/package.json
+++ b/DirUI react/dir-ui/package.json
@@ -10,6 +10,8 @@
         "gh-pages": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router": "^5.2.0",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
     },
